2129 [AutoEncode] enabled option to set the audio language
2128 [Audio Encoder] NicAudio will be tried for DTS-MA decoding when DirectShow and FFAudioSource fail
2127 [AVS Script Creator] improved automatic cropping
2126 [AVS Script Creator] crop values will only be added to the script if necessary
2125 [Job] improved aborting of jobs part II
2124 [Job] improved aborting of jobs
2123 [Log] use system default encoding for AviSynth input script
2122 [Progress Window] added job name. Feature request #3488205
2121 [Audio Encoder] Import() will be used for AVS input files. Bug #3506283
2120 [MKV Muxer] improved handling of empty IDX subtitle files
2119 [MKV Muxer] added job status message during muxing
2118 [MediaInfo] improved information detection for DVD sources
2117 [Chapter Creator] improved DVD PGC handling
2116 [VobSubber] improved detection of subtitle streams
2115 [HD Streams Extractor] fixed handling of english tracks in a MKV container when the track name contains a language
2114 [MKV Muxer] adjusted (de)muxer to the recent mkvmerge changes (requires mkvmerge revision 5.3.0+)
2113 [Job] translate process exit codes to status messages

Changelog 2106 --> 2112

Features:
[File Size Selector] removed some default values and added a control in the settings to add custom file size values
[File Size Selector] all other controls will not save anymore custom values to avoid problems in AutoEncode + OneClick
[Job] delete intermediate files also during job deletion if specified in the settings
[Video Player] changed default start position to the middle if "Improved AVS opening" is selected
[x264] force --keyint-min 1 with Blu-ray (requires x264 revision 2149+)
[x264] replaced vfw4x264 with avs4x264mod. Details:
[x264] http://forum.doom9.org/showthread.php?t=162656

Enhancements:
[AVS Script Creator] fixed opening of FFMS indexed files
[XviD] fixed saving of custom vbv values. Bug #3483985


Changelog 2050 --> 2106

Features: